Fixed z-index on lightbox

--- a/public/assets/css/imageGallery.css
+++ b/public/assets/css/imageGallery.css
@@ -85,6 +85,7 @@
 	left: 50%;
 	margin-right: -50%;
 	transform: translate(-50%, -50%);
+	z-index: -2;
 }
 
 .image-wrapper img {
